Add upload file with firebase storage

--- a/Backend/src/App.API/appsettings.json
+++ b/Backend/src/App.API/appsettings.json
@@ -36,5 +36,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Firebase": {
+  "CredentialPath": "Config/firebase-key.json",
+  "Bucket": "learninglanguageapp-18d06.appspot.com",
+  "ProjectId": "learninglanguageapp-18d06"
+  },
+
   "AllowedHosts": "*"
 }
