--- a/Backend/src/App.Infrastructure/App.Infrastructure.csproj
+++ b/Backend/src/App.Infrastructure/App.Infrastructure.csproj
@@ -9,7 +9,11 @@
 
   <ItemGroup>
 
+    <PackageReference Include="FirebaseAdmin" Version="3.4.0" />
+
     <PackageReference Include="Google.Apis.Auth" Version="1.72.0" />
+
+    <PackageReference Include="Google.Cloud.Storage.V1" Version="4.13.0" />
 
     <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.3.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.8" />
