--- a/Backend/src/App.API/App.API.csproj
+++ b/Backend/src/App.API/App.API.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>57026b64-d580-4a57-8211-d4868cf6286a</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
